--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#home">Главная</a></li>
                 <li><a href="#map">Карта</a></li>
-                <li><a href="#traectories">Маршруты направлений 2024</a></li>
+                <li><a href="#traectories">2024</a></li>
             </ul>
         </nav>
     </header>
@@ -76,7 +76,7 @@
   <div class="cell image6"></div>
 </div>
     
-    <mess-container><mess>Путешествуй!</mess></mess-container>
+   
             <h2>Части статьи:</h2>
             <ul>
                 <li><a href="#">Статья 1: Предисловие</a></li>
