Надеюсь, финальная версия для 3 лабы

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <center><h1>Но обо всём по порядку) </h1></center>
     <p>Началось всё с дня, когда нам сказали, что у одного МИРЭАшного творческого коллектива появилась (пока только призрачная) возможность поехать на фестиваль обмена культурами в другую страну. Да-да, как вы уже догадались, туда, где Чин-чан-чон, панды, миска рис и кошка жена. В трепетном ожидании (намеренно не уверяясь в грядущем раньше времени) мы провели примерно месяц. По истечении этого томительного срока в студии А-319 нашего университета прозвучало долгожданное "Ребят, готовим документы, рюкзаки; Качаем оффлайн-карты. Нас ждут в Поднебесной".<br></br> Ну... Как объяснить, что в этот момент началось во мне и ребятах из коллектива? Представьте себе племя, которое впервые добыло огонь и не может поверить своему счастью - наверное, это лучшая аналогия. To be continued.</p>
 
+<iframe width="100%" height="400px" src="https://rutube.ru/play/embed/4eb9ed2bfc573d8f61a3190591c3e93c/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<p><a href="https://rutube.ru/video/4eb9ed2bfc573d8f61a3190591c3e93c/">Зачем нужно путешествовать? 5 основных мотиваций..</a> на <a href="https://rutube.ru/">RUTUBE</a>
+
     <div class="container">
   <div class="cell image1"></div>
   <div class="cell image2"></div>
